fixed section Header spacing

--- a/examples/mobile-product-mfe/src/main/App.css
+++ b/examples/mobile-product-mfe/src/main/App.css
@@ -133,3 +133,6 @@
 	color: black;
 }
 
+.sectionHeader{
+	padding-top: .8em;
+}
